force-app/main/default/objects/Inventory__c/fields/Assigned_to_Office__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to Office</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>