force-app/main/default/objects/Inventory__c/fields/Date_Entered_Into_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered_Into_Inventory__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Date Entered Into Inventory</label>
    <type>Date</type>
</CustomField>