force-app/main/default/objects/Inventory__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <description>Type of inventory</description>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Citation Book</fullName>
            </value>
            <value>
                <fullName>Receipt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>