force-app/main/default/objects/Inventory__c/fields/Quantity_Entered_Into_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Entered_Into_Inventory__c</fullName>
    <label>Quantity Entered Into Inventory</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>