force-app/main/default/objects/Inventory__c/fields/Start_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Start_Serial_Number__c</fullName>
    <label>Start Serial Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>