force-app/main/default/objects/Inventory__c/fields/Withdrawn_Amount__c.field-meta.xml
<CustomField>
    <fullName>Withdrawn_Amount__c</fullName>
    <label>Withdrawn Amount</label>
    <summarizedField>Inventory_Transaction__c.Quantity_Withdrawn_from_Inventory__c</summarizedField>
    <summaryForeignKey>Inventory_Transaction__c.Inventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>